--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,17 @@
-^audubon\.Rproj$
+^.*\.Rproj$
 ^\.Rproj\.user$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
+^\.yarnclean
+^CODE_OF_CONDUCT\.md$
 ^README\.Rmd$
+^srcjs$
+^node_modules$
+^package\.json$
+^package-lock\.json$
+^yarn\.lock
+^webpack\.dev\.js$
+^webpack\.prod\.js$
+^webpack\.common\.js$
