--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 # Session Data files
 .RData
 
-# User-specific files
-.Ruserdata
-
 # Example code in package build process
 *-Ex.R
 
@@ -28,14 +25,18 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
-*_cache/
+/*_cache/
 /cache/
 
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
 
-# R Environment Variables
-.Renviron
+# Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
+rsconnect/
 
-.Rproj.user
+*.log
+
+inst/doc
+node_modules
+docs
