--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,5 @@ export(strj_normalize)
 export(strj_rewrite_as_def)
 export(strj_romanize)
 export(strj_transcribe_num)
-importFrom(magrittr,"%>%")
+import(dplyr)
 useDynLib(audubon, .registration = TRUE)
