--- a/package.json
+++ b/package.json
@@ -24,19 +24,12 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.3",
-    "buffer": "^6.0.3",
-    "fs": "^0.0.1-security",
-    "https-browserify": "^1.0.0",
-    "prettier": "^1.19.1",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "util": "^0.12.4",
+    "prettier": "^2.4.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-merge": "^5.3.0"
   },
   "dependencies": {
-    "japanese": "^1.2.0",
-    "kyujitai": "^1.3.0"
+    "japanese": "^1.2.0"
   }
 }
