--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,21 @@
 Package: audubon
 Title: R Package for Various Japanese Text Processing
-Version: 0.0.1.9000
+Version: 0.0.2
 Authors@R: c(
-    person("Akiru", "Kato", email = "paithiov909@gmail.com", role = "cre"),
-    person("yumetodo", "", comment = "Author of romaji_kana_cvt_rust", role = "aut"))
+    person("Akiru", "Kato", email = "paithiov909@gmail.com", role = "cre"))
 Description: An R package for various Japanese text processing.
 License: BSL-1.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-SystemRequirements: Cargo (rustc package manager)
 Imports:
     dplyr,
-    furrr,
     magrittr,
-    readr,
+    memoise,
     purrr,
+    readr,
     rlang,
     stringi,
-    stringr,
-    tokenizers,
     V8
 Suggests: 
     spelling
