fix: fix strj_hiraganize name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(ngram_tokenizer)
 export(pack)
 export(read_rewrite_def)
 export(strj_fill_iter_mark)
-export(strj_hiranganize)
+export(strj_hiraganize)
 export(strj_katakanize)
 export(strj_normalize)
 export(strj_rewrite_as_def)
