--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "production": "webpack --config webpack.prod.js"
   },
   "author": "paithiov909",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": true,
   "bugs": {
     "url": "https://github.com/paithiov909/audubon/issues"
