chore: add workflow

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -40,9 +40,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
-          extra-packages: |
-            any::rcmdcheck
-            any::covr
+          extra-packages: rcmdcheck, covr
       - uses: r-lib/actions/check-r-package@v1
 
       - name: Codecov
