--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: audubon
 Title: Japanese Text Processing Tools
-Version: 0.0.6
+Version: 0.1.0
 Authors@R: c(
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("cre", "aut")),
     person("Koki", "Takahashi", role = "cph",
@@ -9,8 +9,8 @@ Authors@R: c(
            comment = "Author of budoux")
   )
 Description: A collection of Japanese text processing tools for filling
-    Japanese iteration marks, hiraganization, katakanization,
-    romanization, segmentation by phrase, and text normalization which is
+    Japanese iteration marks, Japanese character type conversions,
+    segmentation by phrase, and text normalization which is
     based on rules for the 'Sudachi' morphological analyzer and the
     'NEologd' (Neologism dictionary for 'MeCab').  These features are
     specific to Japanese and are not implemented in 'ICU' (International
