--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(strj_romanize)
 export(strj_segment)
 export(strj_tokenize)
 export(strj_transcribe_num)
-importFrom(dplyr,"%>%")
+importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
