--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,18 +30,41 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@v1
+      - uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v1
+      - uses: actions/setup-python@v3
+
+      - name: Install Sudachipy
+        run: |
+          pip install -U sudachipy
+
+      - name: Install MeCab
+        if: ${{ matrix.config.os != 'windows-latest' }}
+        run: |
+          git clone --depth=1 https://github.com/taku910/mecab.git
+          cd mecab/mecab
+          ./configure --enable-utf8-only
+          make
+          sudo make install
+          cd ../mecab-ipadic
+          ./configure --with-charset=utf8
+          make
+          sudo make install
+          cd ../../
+
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: rcmdcheck, covr
-      - uses: r-lib/actions/check-r-package@v1
+
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          error-on: '"error"'
 
       - name: Codecov
         run: covr::codecov()
