--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: audubon
 Title: Japanese Text Processing Tools
-Version: 0.2.0
+Version: 0.2.0.9000
 Authors@R: c(
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("cre", "aut")),
     person("Koki", "Takahashi", role = "cph",
@@ -30,6 +30,7 @@ Imports:
     readr,
     rlang (>= 0.4.11),
     stringi,
+    tidyselect,
     V8
 Suggests: 
     roxygen2,
