--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install Sudachipy
         run: |
-          pip install -U sudachipy
+          pip install -U sudachipy sudachidict_core
 
       - name: Install MeCab
         if: ${{ matrix.config.os != 'windows-latest' }}
