--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: audubon
 Title: Japanese Text Processing Tools
-Version: 0.4.0
+Version: 0.4.1
 Authors@R: c(
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("cre", "aut")),
     person("Koki", "Takahashi", role = "cph",
@@ -23,7 +23,7 @@ BugReports: https://github.com/paithiov909/audubon/issues
 Depends: 
     R (>= 2.10)
 Imports:
-    dplyr,
+    dplyr (>= 1.1.0),
     magrittr,
     Matrix,
     memoise,
